@@ -7,6 +7,7 @@ import java.time.format.TextStyle;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -34,46 +35,46 @@ public class DateRangePickerLocalizedDemo extends Composite<VerticalLayout>
 		new DateRangePicker<>(
 			() -> new DateRangeModel<>(LocalDate.now(), LocalDate.now(), SimpleDateRanges.TODAY),
 			DATERANGE_VALUES)
-		.withDatePickerI18n(getDatePickerI18n())
-		.withDateRangeLocalizerFunction(dr -> {
-			if(dr == SimpleDateRanges.TODAY)
-			{
-				return "Today - Heute";
-			}
-			else if(dr == SimpleDateRanges.DAY)
-			{
-				return "Day - Tag";
-			}
-			else if(dr == SimpleDateRanges.WEEK)
-			{
-				return "Week - Woche";
-			}
-			else if(dr == SimpleDateRanges.MONTH)
-			{
-				return "Month - Monat";
-			}
-			else if(dr == SimpleDateRanges.QUARTER)
-			{
-				return "Quarter - Quartal";
-			}
-			else if(dr == SimpleDateRanges.HALF_YEAR)
-			{
-				return "Half year - Halbjahr";
-			}
-			else if(dr == SimpleDateRanges.YEAR)
-			{
-				return "Year - Jahr";
-			}
-			else if(dr == SimpleDateRanges.FREE)
-			{
-				return "Free - Frei";
-			}
-			
-			return "?";
-		})
-		.withStartLabel("Start - Anfang")
-		.withEndLabel("End - Ende")
-		.withDateRangeOptionsLabel("Period - Zeitraum");
+			.withDatePickerI18n(getDatePickerI18n())
+			.withDateRangeLocalizerFunction(dr -> {
+				if(dr == SimpleDateRanges.TODAY)
+				{
+					return "Today - Heute";
+				}
+				else if(dr == SimpleDateRanges.DAY)
+				{
+					return "Day - Tag";
+				}
+				else if(dr == SimpleDateRanges.WEEK)
+				{
+					return "Week - Woche";
+				}
+				else if(dr == SimpleDateRanges.MONTH)
+				{
+					return "Month - Monat";
+				}
+				else if(dr == SimpleDateRanges.QUARTER)
+				{
+					return "Quarter - Quartal";
+				}
+				else if(dr == SimpleDateRanges.HALF_YEAR)
+				{
+					return "Half year - Halbjahr";
+				}
+				else if(dr == SimpleDateRanges.YEAR)
+				{
+					return "Year - Jahr";
+				}
+				else if(dr == SimpleDateRanges.FREE)
+				{
+					return "Free - Frei";
+				}
+				
+				return "?";
+			})
+			.withStartLabel("Start - Anfang")
+			.withEndLabel("End - Ende")
+			.withDateRangeOptionsLabel("Period - Zeitraum");
 	
 	private final TextArea taResult =
 		new TextArea("ValueChangeEvent", "Change something in the datepicker to see the result");
@@ -94,41 +95,41 @@ public class DateRangePickerLocalizedDemo extends Composite<VerticalLayout>
 		this.taResult.setSizeFull();
 		this.getContent().add(this.dateRangePicker, this.taResult, this.btnToogleReadonly);
 		
-		this.btnToogleReadonly.addClickListener(ev -> this.dateRangePicker.setReadOnly(!this.dateRangePicker.isReadOnly()));
+		this.btnToogleReadonly.addClickListener(ev ->
+			this.dateRangePicker.setReadOnly(!this.dateRangePicker.isReadOnly()));
 		
 		this.dateRangePicker.addValueChangeListener(ev ->
 		{
 			final DateRangeModel<SimpleDateRange> modell = ev.getValue();
 			
 			this.taResult.clear();
-			this.taResult.setValue(
-					"DateRange: " + modell.getDateRange().getKey() + "\r\n" +
-					"Start: " + modell.getStart() + "\r\n" +
-					"End: " + modell.getEnd()
-				);
+			this.taResult.setValue(Map.of(
+					"DateRange", modell.getDateRange().getKey(),
+					"Start", modell.getStart().toString(),
+					"End", modell.getEnd().toString()
+				).entrySet()
+				.stream()
+				.map(e -> e.getKey() + ": " + e.getValue())
+				.collect(Collectors.joining("\r\n")));
 		});
 	}
 	
 	// List Must start with Sunday and ends with Saturday... Americans...
-	private static final List<DayOfWeek> daysOfWeekSortedForDatepicker =
+	private static final List<DayOfWeek> DAYS_OF_WEEK_SORTED_FOR_DATEPICKER =
 		Stream.concat(
-			Stream.of(DayOfWeek.SUNDAY),
-			Stream.of(DayOfWeek.values()).filter(dow -> !dow.equals(DayOfWeek.SUNDAY))
-				)
-		.collect(Collectors.toList());
-		
-	private static final List<String> weekdays =
-		daysOfWeekSortedForDatepicker.stream()
-			.map(dow -> dow.getDisplayName(TextStyle.FULL, Locale.GERMAN))
-			.collect(Collectors.toList());
-	private static final List<String> weekdaysshort =
-		daysOfWeekSortedForDatepicker.stream()
-			.map(dow -> dow.getDisplayName(TextStyle.SHORT, Locale.GERMAN))
-			.collect(Collectors.toList());
-	private static final List<String> months =
-		Stream.of(Month.values())
-			.map(m -> m.getDisplayName(TextStyle.FULL, Locale.GERMAN))
-			.collect(Collectors.toList());
+				Stream.of(DayOfWeek.SUNDAY),
+				Stream.of(DayOfWeek.values()).filter(dow -> !dow.equals(DayOfWeek.SUNDAY)))
+			.toList();
+	
+	private static final List<String> WEEKDAYS = DAYS_OF_WEEK_SORTED_FOR_DATEPICKER.stream()
+		.map(dow -> dow.getDisplayName(TextStyle.FULL, Locale.GERMAN))
+		.toList();
+	private static final List<String> WEEKDAYS_SHORT = DAYS_OF_WEEK_SORTED_FOR_DATEPICKER.stream()
+		.map(dow -> dow.getDisplayName(TextStyle.SHORT, Locale.GERMAN))
+		.toList();
+	private static final List<String> MONTHS = Stream.of(Month.values())
+		.map(m -> m.getDisplayName(TextStyle.FULL, Locale.GERMAN))
+		.toList();
 	
 	/**
 	 * Standard DatePickerI18N
@@ -141,9 +142,9 @@ public class DateRangePickerLocalizedDemo extends Composite<VerticalLayout>
 		datepicker.setCancel("Abbrechen");
 		datepicker.setToday("Heute");
 		
-		datepicker.setMonthNames(months);
-		datepicker.setWeekdays(weekdays);
-		datepicker.setWeekdaysShort(weekdaysshort);
+		datepicker.setMonthNames(MONTHS);
+		datepicker.setWeekdays(WEEKDAYS);
+		datepicker.setWeekdaysShort(WEEKDAYS_SHORT);
 		return datepicker;
 	}
 }
